tests/jastadd/negative/type_errors/L2/3_TypeCheckingForStmt3.ob
MODULE TestModule;
BEGIN
    FOR k := 1 TO 2 DO
    END
END TestModule.
